[gd_scene load_steps=11 format=3 uid="uid://da0i5mvi5peld"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1_pfxim"]
[ext_resource type="Script" path="res://icosahedron/icosahedron.gd" id="2_334ip"]
[ext_resource type="PackedScene" uid="uid://dwlgl8js0ir3" path="res://octaeder/octaeder.gltf" id="3_16rh7"]
[ext_resource type="Script" path="res://scenes/FigureSpawner.gd" id="4_kdf15"]
[ext_resource type="Script" path="res://scenes/Signals.gd" id="5_ano1o"]
[ext_resource type="Script" path="res://scenes/GameStateManager.gd" id="6_3ppd5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yo2jy"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_7x0am"]
sky_material = SubResource("ProceduralSkyMaterial_yo2jy")

[sub_resource type="Environment" id="Environment_8ubl6"]
background_mode = 2
sky = SubResource("Sky_7x0am")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_3udkk"]
margin = 0.0
size = Vector3(25, 25, 25)

[node name="Main" type="Node3D"]
script = ExtResource("1_pfxim")
metadata/_edit_vertical_guides_ = [-264.0, -144.0]
metadata/_edit_horizontal_guides_ = [80.0]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.0417536, 0.416774, -0.908051, -0.0027725, 0.908792, 0.417241, 0.999124, 0.0199389, -0.0367898, -12.6987, 6.09183, 0.473044)
rotation_edit_mode = 1
h_offset = -1.34

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.0409792, 0.660641, -0.749583, -0.599842, 0.583709, 0.547242, 0.799069, 0.472056, 0.37236, 0.155482, 0.644891, 0.176892)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_8ubl6")

[node name="Octahedron" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Octahedron"]
script = ExtResource("2_334ip")

[node name="octaeder" parent="Octahedron/MeshInstance3D" instance=ExtResource("3_16rh7")]
transform = Transform3D(5.035, 0, 0, 0, 5.035, 0, 0, 0, 5.035, 0, 0, 0)

[node name="Gui" type="CanvasLayer" parent="."]

[node name="GameStatePanel" type="PanelContainer" parent="Gui"]
offset_right = 264.0
offset_bottom = 80.0

[node name="CenterContainer" type="VFlowContainer" parent="Gui/GameStatePanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/GameStatePanel"]
layout_mode = 2
alignment = 1

[node name="HFlowContainer" type="HFlowContainer" parent="Gui/GameStatePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Gui/GameStatePanel/VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "GAME_STATE: "
horizontal_alignment = 1

[node name="GameStateLabel" type="Label" parent="Gui/GameStatePanel/VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "NULL"

[node name="TimerPanel" type="PanelContainer" parent="Gui"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_bottom = 56.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="CenterContainer" type="CenterContainer" parent="Gui/TimerPanel"]
layout_mode = 2

[node name="TimerRichTextLabel" type="RichTextLabel" parent="Gui/TimerPanel/CenterContainer"]
custom_minimum_size = Vector2(86.765, 23.805)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]00:00:000[/center]
"

[node name="CollisionContainer" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionContainer"]
shape = SubResource("BoxShape3D_3udkk")

[node name="FigureSpawner" type="Marker3D" parent="."]
script = ExtResource("4_kdf15")

[node name="Signals" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_ano1o")

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource("6_3ppd5")

[connection signal="spawn_figure" from="FigureSpawner" to="FigureSpawner" method="_on_spawn_figure"]
[connection signal="game_state_changed" from="Signals" to="GameStateManager" method="_on_signals_game_state_changed"]
[connection signal="pause_game" from="Signals" to="Octahedron/MeshInstance3D" method="_on_signals_pause_game"]
[connection signal="start_game" from="Signals" to="Octahedron/MeshInstance3D" method="_on_signals_start_game"]
[connection signal="start_game" from="Signals" to="FigureSpawner" method="_on_signals_start_game"]
